--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">etowfaith@gmail.com</a>
+              <a href="etowfaith@gmail.com" class="contact-link">etowfaith@gmail.com</a>
             </div>
 
           </li>
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+237690638066" class="contact-link">+237690638066</a>
+              <a href="tel:+237679894706" class="contact-link">+237679894706</a>
             </div>
 
           </li>
